# Mono-Site

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
content/songs/: ahimsa.md  anchor.md  another-love.md  apocalypse.md  apologize.md  arcade.md  ava.md  back-to-friends.md  belong-together.md  better-days.md  bitter-sweet-symphony.md  blue.md  boulevard-of-broken-dreams.md  burn.md  bye-bye-bye.md  chasing-cars.md  clean-eyes.md  cry.md  daylight.md  dog-days-are-over.md  dont-let-it-break-your-heart.md  end-of-beginning.md  fairytale.md  favorite.md  fix-you.md  forever-young.md  gabriela.md  golden-brown.md  golden-hour.md  goodbye.md  her.md  heroes.md  hey-brother.md  hey-soul-sister.md  high-hopes.md  hold-on.md  i-like-me-better.md  in-the-stars.md  in-this-shirt.md  infinity.md  (+46 more)
landing/: index.html  quotes.json  robots.txt  script.js  sitemap.xml  styles.css
scripts/: build.sh
src/: build.py  cli.py  db.py
src/birthdays/: builder.py  models.py
src/f1/: builder.py  ergast_api.py  service.py
src/feed/: builder.py  fetcher.py  models.py
src/football/: api.py  builder.py  processor.py  service.py
src/quotes/: builder.py
src/sky/: README.md  builder.py  compute.py
src/songs/: builder.py
src/stats/: builder.py
static-sites/1d/: index.html
static-sites/stretch/: index.html
static-sites/ttt/: README.md  index.html
static-sites/weather/: index.html
static-sites/workout/: index.html
templates/: base.html  birthdays.html  f1.html  feed.html  football.html  quotes.html  sky.html  song.html  songs.html  stats.html
(+9 files in other folders)
