[project]
name = "mono-site"
version = "1.0.0"
description = "Monorepo for maheshkumar.blog"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "requests>=2.32",
    "jinja2>=3.1",
    "click>=8.0",
    "python-dotenv>=1.0",
    "skyfield>=1.54",
    "pandas>=3.0.1",
]

[project.scripts]
mono-build = "src.build:main"
mono-cli = "src.cli:main"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
